# Werewolves

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: ci.yaml
backends/: CMakeLists.txt
backends/pipe/: CMakeLists.txt  pipe_communication.cpp  pipe_communication.h
backends/shm/: CMakeLists.txt  shm_communication.cpp  shm_communication.h
backends/template/: CMakeLists.txt  template_communication.cpp  template_communication.h
docs/: communication_contract.md  game.md  pipe_backend.md  shm_backend.md  template_backend.md
frontends/: CMakeLists.txt
frontends/pipes/: CMakeLists.txt  client.cpp  pipe_client.cpp  pipe_server.cpp  server.cpp
frontends/shm/: CMakeLists.txt  client.cpp  server.cpp  shm_client.cpp  shm_server.cpp
include/werewolf/: client_communication.h  communication.h  game.h  server_communication.h  types.h
include/werewolf/frontends/pipes/: client_types.h  server_types.h
include/werewolf/frontends/shm/: client_types.h  server_types.h
src/: game.cpp
tests/: CMakeLists.txt  test_template.cpp
tests/game/: fake_communication.h  test_game.cpp  test_unit.cpp
tests/pipe/: test_pipe.cpp
tests/pipe/e2e/: test_pipe_e2e.sh
tests/shm/: test_shm.cpp
tests/shm/e2e/: test_shm_e2e.sh
tests/template/: test_template.cpp
tests/utils/: files.h  temp_dir.h
